fix: update red color to improve contrast for better accessibility

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
   --color-background-500: #2c2c54;
   --color-background-900: #141431;
   --color-red: #fa5252;
-  --color-red-dark: #e03131;
+  --color-red-dark: #e74646;
   --color-gold: #ffd700;
 }
 
